kubernetes/experimental-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experimental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: experimental
  template:
    metadata:
      labels:
        app: experimental
    spec:
      containers:
        - name: experimental
          image: cje3295/experimental:arm64-release-1.0.14
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
