kubernetes/experimental-service.yml
apiVersion: v1
kind: Service
metadata:
  name: experimental-service
spec:
  selector:
    app: experimental
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
